--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scrollable-feed": "^1.3.1",
     "react-select": "^4.3.1",
     "react-share": "^4.4.0",
     "react-toastify": "^7.0.3",
